hw02/health-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health
  namespace: health
  labels:
    app: health
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      name: health
      labels:
        app: health
    spec:
      containers:
        - image: astrviktor/health:1.0.0
          name: health
          livenessProbe:
            httpGet:
              path: /health/
              port: 8000
            periodSeconds: 30
            failureThreshold: 15
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /health/
              port: 8000
            periodSeconds: 5
            failureThreshold: 15
            successThreshold: 1
            timeoutSeconds: 2
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "16Mi"
            limits:
              cpu: "200m"
              memory: "32Mi"
