hw02/health-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: health
  namespace: health
  labels:
    app: health
spec:
  type: NodePort
  ports:
    - nodePort: 30001
      port: 8000
      protocol: TCP
      targetPort: 8000
      name: health
  selector:
    app: health
