hw02/health-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: health
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /otusapp/astrviktor/(.*)
            backend:
              service:
                name: health
                port:
                  number: 8000
          - pathType: Prefix
            path: /(.*)
            backend:
              service:
                name: health
                port:
                  number: 8000
